<resources>
    <string name="app_name">Pairings</string>
    <string name="title_activity_tournament_screen">TournamentScreen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tournament_setup">Tournament Setup</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="round_robin">Round Robin</string>
    <string name="single_elimination">Single Elimination</string>
    <string name="double_elimination">Double Elimination</string>
    <string name="swiss">Swiss</string>
    <string name="add_players">Add Players</string>
    <string name="randomize_seeds">Randomize Seeds</string>
    <string name="begin_tournament">Begin Tournament</string>
    <string name="new_tournament">New Tournament</string>
    <string name="load_tournament">Load Saved Tournament</string>
    <string name="load_latest_autosave">Load Latest Autosave\n(4/28/16 2:12PM)</string>
</resources>
