<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gui.pairings.TournamentType">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:src="@drawable/tournament_setup"
            android:id="@+id/imageView"
            android:contentDescription="Tournament Setup"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_field"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/tournament_name"
            android:maxLength="20"
            android:singleLine="true"
            android:padding="15dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/round_robin"
            android:id="@+id/round_robin_button"
            android:layout_gravity="center_horizontal"
            android:onClick="chooseType"
            android:padding="15dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/swiss"
            android:id="@+id/swiss_button"
            android:layout_gravity="center_horizontal"
            android:onClick="chooseType"
            android:padding="15dp"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:clickable="true" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/single_elimination"
            android:id="@+id/single_elim_button"
            android:layout_gravity="center_horizontal"
            android:onClick="chooseType"
            android:padding="15dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/double_elimination"
            android:id="@+id/double_elim_button"
            android:layout_gravity="center_horizontal"
            android:onClick="chooseType"
            android:padding="15dp"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:clickable="true" />

        <Button
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_players"
            android:id="@+id/add_players_button"
            android:layout_gravity="center_horizontal"
            android:onClick="nextScreen"
            android:padding="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:enabled="false" />

    </LinearLayout>

</RelativeLayout>
