<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="gui.pairings.HomeScreen" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:src="@drawable/pairings_logo"
        android:id="@+id/pairings_logo"
        android:contentDescription="Pairings Logo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:layout_margin="10dp"
        android:text="@string/new_tournament"
        android:id="@+id/new_tournament_button"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:enabled="true"
        android:onClick="moveToTournamentSetup"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/load_latest_autosave"
        android:id="@+id/load_autosave_button"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:enabled="true"
        android:onClick="moveToTournamentScreen"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:background="@drawable/listview_background"
        android:foreground="@drawable/listview_foreground"
        android:baselineAligned="false"
        android:layout_weight="0.1"
        android:gravity="center">

        <TextView
            android:id="@+id/empty"
            android:text="No Saved\nTournaments"
            android:layout_width="fill_parent"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:gravity="center" />

        <ListView
            android:id="@+id/files_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/load_autosave_button"
            android:dividerHeight="1dp"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:layout_margin="10dp"
        android:text="@string/load_tournament"
        android:id="@+id/load_tournament_button"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:enabled="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

</LinearLayout>
